styles.css
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    transition: background-color 0.3s, color 0.3s;
}

.container {
    width: 100%;
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

a:link {
    color: #fff;
    background-color: transparent;
    text-decoration: none;
    font-weight: bold;
  }
  
  a:visited {
    color: #888;
    background-color: transparent;
    text-decoration: none;
    font-weight: bold;
  }

.number {
    font-size: 3rem;
    font-weight: bold;
    margin-bottom: 1rem;
}

.theme-button {
    position: fixed;
    top: 20px;
    right: 20px;
    cursor: pointer;
    z-index: 9999;
    background-color: transparent;
    border: none;
    font-size: 24px;
    color: #121212;
}

.theme-button.dark {
    color: #fff;
}

.dark-theme {
    background-color: #121212;
    color: #fff;
}

.reset-button {
    position: fixed;
    top: 20px;
    right: 70px;
    cursor: pointer;
    z-index: 9999;
    background-color: transparent;
    border: none;
    font-size: 24px;
    color: #121212;
}

.reset-button.dark {
    color: #fff;
}

.prestige-button {
    position: fixed;
    top: 20px;
    right: 120px;
    cursor: pointer;
    z-index: 9999;
    background-color: transparent;
    border: none;
    font-size: 24px;
    color: #121212;
}

.prestige-button.dark {
    color: #fff;
}

.warning-message {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    text-align: center;
    background-color: #121212;
    color: #f44336;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.warning-message h1 {
    font-size: 32px;
    margin: 0;
    padding: 20px;
}

.warning-message p {
    font-size: 24px;
    margin: 0;
    padding: 20px;
}

.scroll-tip {
    position: fixed;
    bottom: 20px;
    left: 50%;
    transform: translateX(-50%);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    color: #888;
    font-size: 14px;
    transition: opacity 0.3s;
    opacity: 1;
}

.scroll-tip p {
    margin-bottom: 5px;
}

